# staticify-ip

./: .gitignore  CHANGELOG.md  Cargo.nix  Cargo.toml  LICENSE  README.md  cog.toml  flake.nix  rust-toolchain.toml
modules/: nixos.nix
src/: lib.rs  main.rs
staticify-ip/: Cargo.toml
staticify-ip/src/: lib.rs
